fix: overflow forms editar

--- a/src/app/layout/home/home.component.css
+++ b/src/app/layout/home/home.component.css
@@ -6,3 +6,11 @@
   border-radius: 20px;
   border: 1px solid gray;
 }
+
+.sizetext{
+  font-size: 3rem;
+}
+
+.sizep{
+  font-size: 1rem;
+}
